[package]
name = "basic-algo-and-struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4.0.9", features = ["derive"] }

[lib]
name = "basics"
path = "src/lib.rs"

# [[example]]
# name = "sort_vec"
# path = "examples/sort_vec.rs"
# crate-type = ["staticlib"]

# [[bin]]
# name = "collinearity"
# path = "src/bin/collinearity.rs"
# crate-type = ["staticlib"]
