[package]
name = "part_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "4.0.9", features = ["derive"] }

[lib]
name = "lib"
path = "src/lib.rs"

[[example]]
name = "percolation"
path = "src/examples/percolation.rs"
# crate-type = ["staticlib"]

[[example]]
name = "threesum"
path = "src/examples/3sum.rs"
